fix: footer missing padding when page gets longer

--- a/llmgoat/static/style.css
+++ b/llmgoat/static/style.css
@@ -210,7 +210,7 @@ a:visited {
   flex: 1;
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  padding: 2rem 2rem 0 2rem;
   margin-left: 335px;
 }
 
@@ -286,6 +286,7 @@ mark {
 
 .main-footer {
   text-align: center;
+  padding-bottom: 2rem;
 }
 
 /* solved overlay styles */
